--- a/theme/iomad/less/iomad.less
+++ b/theme/iomad/less/iomad.less
@@ -41,16 +41,34 @@
     }
 
 // Page header.
+.navbar-text a {
+    color: @IOMAD_Orange;
+    }
+
 #page-header h1 {
     font-family: iomad;
+    font-size: 40px;
     font-weight: normal;
     color: @IOMAD_Orange;
+    }
+
+// Regions.
+#region-main {
+    background-color: #ffffff;
+    padding: 5px 5px 5px 5px;
+    border:2px solid #A8A8A8;
+    -webkit-box-shadow:rgba(0, 0, 0, 0.0470588) 0 1px 1px inset;
+    border-bottom-left-radius:4px;
+    border-bottom-right-radius:4px;
+    border-top-left-radius:4px;
+    border-top-right-radius:4px;
+    box-shadow:rgba(0, 0, 0, 0.0470588) 0 1px 1px inset;
     }
 
 // Blocks.
 .iomad_block_title {
     color: @IOMAD_Orange;
-    font-size: 20px;
+    font-size: 26px;
     text-transform: uppercase;
     font-family: iomad;
     font-weight: normal;
@@ -66,6 +84,18 @@
 
 .block {
     border: 2px solid @IOMAD_Border_black;
-    background-color: lighten(@IOMAD_Blue, 22%);
+    background-color: #ffffff;
     }
 
+body {
+    background-color: #555555;
+    }
+
+#page-footer a {
+    color: #ffffff;
+    }
+
+#page-footer {
+    color: @IOMAD_Orange;
+    border-top-width: 0px;
+    }
