--- a/theme/iomad/style/iomad.css
+++ b/theme/iomad/style/iomad.css
@@ -22,33 +22,58 @@
   color: #f75701;
   padding: 0 10px;
 }
+.navbar-text a {
+  color: #f75701;
+}
 #page-header h1 {
   font-family: iomad;
+  font-size: 40px;
   font-weight: normal;
   color: #f75701;
 }
+#region-main {
+  background-color: #ffffff;
+  padding: 5px 5px 5px 5px;
+  border: 2px solid #A8A8A8;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.0470588) 0 1px 1px inset;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  box-shadow: rgba(0, 0, 0, 0.0470588) 0 1px 1px inset;
+}
 .iomad_block_title {
   color: #f75701;
-  font-size: 20px;
+  font-size: 26px;
   text-transform: uppercase;
   font-family: iomad;
   font-weight: normal;
 }
 .block .header .title h2 {
   color: #f75701;
-  font-size: 20px;
+  font-size: 26px;
   text-transform: uppercase;
   font-family: iomad;
   font-weight: normal;
 }
 .block .content h3 {
   color: #f75701;
-  font-size: 20px;
+  font-size: 26px;
   text-transform: uppercase;
   font-family: iomad;
   font-weight: normal;
 }
 .block {
   border: 2px solid #a8a8a8;
-  background-color: #e6fbff;
+  background-color: #ffffff;
+}
+body {
+  background-color: #555555;
+}
+#page-footer a {
+  color: #ffffff;
+}
+#page-footer {
+  color: #f75701;
+  border-top-width: 0px;
 }
