MDL-43258 theme_bootstrapbase: Style coursebox info name better in Bootstrap themes.

--- a/theme/bootstrapbase/less/moodle/course.less
+++ b/theme/bootstrapbase/less/moodle/course.less
@@ -391,7 +391,6 @@ span.editinstructions {
 .coursebox.remotehost > .info > .name a {
     background-image:url([[pix:moodle|i/mnethost]]);
 }
-.coursebox > .info > .name,
 .coursebox .content .teachers,
 .coursebox .content .courseimage,
 .coursebox .content .coursefile {
@@ -405,6 +404,8 @@ span.editinstructions {
 .coursebox > .info > .name {
     margin: 5px;
     padding: 0;
+    float: left;
+    width: auto;
 }
 .coursebox .content .teachers li {
     list-style-type:none;
