IOMAD: theme customisations for company were not working.

--- a/theme/iomad/style/iomad.css
+++ b/theme/iomad/style/iomad.css
@@ -77,3 +77,19 @@ body {
   color: #f75701;
   border-top-width: 0px;
 }
+
+#sitelogo {
+    float: left;
+    width:100px;
+    padding-bottom: 10px;
+}
+
+#siteheading {
+    float: left;
+    left: 100px;
+}
+
+#clientlogo {
+    float: right;
+    width: 100px;
+}
