MDL-40705 theme_bootstrapbase: Handling of long words in block content

--- a/theme/bootstrapbase/less/moodle/blocks.less
+++ b/theme/bootstrapbase/less/moodle/blocks.less
@@ -39,11 +39,14 @@
     width:auto;
 }
 
-.block .content {
-    padding: 4px 14px;
-}
-.block .content hr {
-    margin: 5px 0;
+.block {
+    .content {
+        padding: 4px 14px;
+        word-wrap: break-word;
+        hr {
+            margin: 5px 0;
+        }
+    }
 }
 
 .block.hidden .content {
