--- a/theme/bootstrapbase/less/moodle/blocks.less
+++ b/theme/bootstrapbase/less/moodle/blocks.less
@@ -33,12 +33,14 @@
     width: 12px;
     height: 12px;
 }
-
-.block .content {
-    padding: 4px 14px;
-}
-.block .content hr {
-    margin: 5px 0;
+.block {
+    .content {
+        padding: 4px 14px;
+        word-wrap: break-word;
+        hr {
+            margin: 5px 0;
+        }
+    }
 }
 
 .block.hidden .content {
