MDL-41152 theme_bootstrapbase: Optimise width for gradebook tree view

--- a/theme/bootstrapbase/less/moodle/grade.less
+++ b/theme/bootstrapbase/less/moodle/grade.less
@@ -65,11 +65,18 @@
     white-space: nowrap;
     width: 105px;
 }
-.gradetreebox td.name {
-    white-space: nowrap;
+.gradetreebox th.cell,
+.gradetreebox input[type=text] {
+    width: auto;
+}
+.gradetreebox input[type=text],
+.gradetreebox select {
+        margin-bottom: 0;
+        font-size: inherit;
 }
 .gradetreebox td.name h4 {
     display: inline;
+    font-size: inherit;
 }
 .gradetreebox td.range {
     white-space: nowrap;
