--- a/theme/bootstrapbase/less/moodle/modules.less
+++ b/theme/bootstrapbase/less/moodle/modules.less
@@ -78,12 +78,9 @@ select {
      margin-bottom: 0 !important;
 }
 
-#page-mod-forum-discuss .discussioncontrol.displaymode {
-    text-align: left;
-}
-
-#page-mod-forum-discuss .discussioncontrols .discussioncontrol {
-    float: left;
+#page-mod-forum-discuss .discussioncontrols {
+    width: auto;
+    margin: 0;
 }
 
 #page-footer {
