MDL-41506 theme_bootstrapbase: Implement highlight class

--- a/theme/bootstrapbase/less/moodle/core.less
+++ b/theme/bootstrapbase/less/moodle/core.less
@@ -114,6 +114,9 @@ a.dimmed_text:visited,
 .notifysuccess {
     color: @successText;
 }
+.highlight {
+    background: @infoBackground;
+}
 .reportlink {
     text-align: right;
 }
