--- a/theme/bootstrapbase/less/moodle/core.less
+++ b/theme/bootstrapbase/less/moodle/core.less
@@ -119,6 +119,9 @@ a.dimmed_text:visited,
 .notifysuccess {
     color: @successText;
 }
+.highlight {
+    background: @infoBackground;
+}
 .reportlink {
     text-align: right;
 }
