MDL-42505 - Feedback plugin: Inappropriate use of fieldset tags around form and cancel button
Changes:
* Removed the fieldset HTML tags around the Cancel button at the bottom of the form.
* Removed the fieldset HTML tags around the whole form.
* Added missing fieldset tags around groups of radio buttons and checkboxes.
* Removed unordered list wrapping dropdown lists.
* Removed duplicate label for dropdown lists.

Modified Files:
* mod/feedback/complete.php
* mod/feedback/complete_guest.php
* mod/feedback/item/multichoice/lib.php
* mod/feedback/item/multichoicerated/lib.php

Signed-off-by: Michael Milette <michael.milette@instruxmedia.com>

--- a/mod/feedback/styles.css
+++ b/mod/feedback/styles.css
@@ -47,21 +47,27 @@ div.feedback_item_commands_right {
 
 li.feedback_item_check_h_left,
 li.feedback_item_check_h_right,
-li.feedback_item_select_h_left,
-li.feedback_item_select_h_right,
 li.feedback_item_radio_h_left,
-li.feedback_item_radio_h_right{
+li.feedback_item_radio_h_right {
 	list-style-type:none;
 	display:inline;
 }
 
+div.feedback_item_select_h_left,
+div.feedback_item_select_h_right {
+	display:block;
+}
+
 li.feedback_item_check_v_left,
 li.feedback_item_check_v_right,
-li.feedback_item_select_v_left,
-li.feedback_item_select_v_right,
 li.feedback_item_radio_v_left,
-li.feedback_item_radio_v_right{
+li.feedback_item_radio_v_right {
 	list-style-type:none;
+	display:block;
+}
+
+div.feedback_item_select_v_left,
+div.feedback_item_select_v_right {
 	display:block;
 }
 
