MDL-43994 Blocks: Hide the move icon when blocks are docked

--- a/theme/bootstrapbase/less/moodle/dock.less
+++ b/theme/bootstrapbase/less/moodle/dock.less
@@ -67,6 +67,12 @@ body.has_dock {
             cursor: pointer;
         }
     }
+
+    .editing_move,
+    .moodle-core-dragdrop-draghandle {
+        display: none;
+    }
+
 }
 
 #dockeditempanel {
