--- a/theme/bootstrapbase/less/moodle/blocks.less
+++ b/theme/bootstrapbase/less/moodle/blocks.less
@@ -126,6 +126,22 @@
     border-top-color: darken(@wellBackground, 7%);
 }
 
+// Overide for login block.
+.block_login {
+    input#login_username,
+    input#login_password {
+        width: 95%;
+    }
+    .content {
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 280px;
+    }
+    input[type="submit"] {
+        margin: 10px 0;
+    }
+}
+
 // Overide for RTL layout.
 .dir-rtl {
     .block .header,
