MDL-43994 theme_bootstrapbase: consistent commenting between themes

--- a/theme/bootstrapbase/less/moodle/dock.less
+++ b/theme/bootstrapbase/less/moodle/dock.less
@@ -68,6 +68,7 @@ body.has_dock {
         }
     }
 
+    // Hide the move icon for blocks which are docked.
     .editing_move,
     .moodle-core-dragdrop-draghandle {
         display: none;
