Examples comparison more obvious distinction between Reference and Submitter's assessment

--- a/mod/workshop/styles.css
+++ b/mod/workshop/styles.css
@@ -721,3 +721,13 @@
 {
   text-align:center;
 }
+
+.path-mod-workshop h2.reference-assessment
+{
+  color: #22DD66;
+}
+
+.path-mod-workshop h2.example-assessment
+{
+  color: #DD6622;
+}
