--- a/theme/base/style/admin.css
+++ b/theme/base/style/admin.css
@@ -270,29 +270,29 @@
 #page-admin-index #plugins-check-info {text-align:center;margin:1em;}
 #page-admin-index #plugins-check td {vertical-align: top;}
 #page-admin-index #plugins-check {margin-left:auto; margin-right:auto;}
-#page-admin-index #plugins-check .displayname .pluginicon {width:16px;}
+#page-admin-index #plugins-check .displayname .pluginicon {width:16px;margin-right:5px}
+#page-admin-index #plugins-check .displayname .plugindir {font-size:0.7em;color:#999;}
 #page-admin-index #plugins-check .missingfromdisk .displayname {background-color:#ffd3d9;}
-#page-admin-index #plugins-check .standard .source {color:#999;}
-#page-admin-index #plugins-check .extension .source {background-color:#f3f2aa;}
 #page-admin-index #plugins-check .msg td {text-align:center;}
 #page-admin-index #plugins-check .status-downgrade .status {background-color:#ffd3d9;}
 #page-admin-index #plugins-check .status-missing .status {background-color:#ffd3d9;}
 #page-admin-index #plugins-check .status-new .status {background-color:#e7f1c3;}
-#page-admin-index #plugins-check .status-nodb .status {color:#999;}
+#page-admin-index #plugins-check .status-nodb .status .statustext {color:#999;}
 #page-admin-index #plugins-check .status-delete .status {background-color:#d2ebff;}
 #page-admin-index #plugins-check .status-upgrade .status {background-color:#d2ebff;}
-#page-admin-index #plugins-check .status-uptodate .status {color:#999;}
+#page-admin-index #plugins-check .status-uptodate .status .statustext {color:#999;}
+#page-admin-index #plugins-check .status .sourcetext:after {content:" / ";}
+#page-admin-index #plugins-check .standard .status .sourcetext {color:#999;}
 #page-admin-index #plugins-check .requires ul {font-size:0.7em;margin:0;}
 #page-admin-index #plugins-check .requires li {display:block;}
 #page-admin-index #plugins-check .requires-ok {color:#999;}
 #page-admin-index #plugins-check .requires-failed {background-color:#ffd3d9;}
-#page-admin-index #plugins-check .status .pluginupdateinfo {padding:5px 10px;margin:10px;background-color:#d2ebff;-moz-border-radius: 10px;-webkit-border-radius: 10px;border-radius: 10px;}
+#page-admin-index #plugins-check .requires-failed .label-important {color:red;}
+#page-admin-index #plugins-check .status .pluginupdateinfo {padding:5px 10px;margin:10px 0px;background-color:#d2ebff;-moz-border-radius: 10px;-webkit-border-radius: 10px;border-radius: 10px;}
 #page-admin-index #plugins-check .status .pluginupdateinfo.maturity50 {background-color:#ffd3d9;}
 #page-admin-index #plugins-check .status .pluginupdateinfo.maturity100,
 #page-admin-index #plugins-check .status .pluginupdateinfo.maturity150 {background-color:#f3f2aa;}
-#page-admin-index #plugins-check .status .pluginupdateinfo span,
-#page-admin-index #plugins-check .status .pluginupdateinfo a {padding-right:1em;}
-#page-admin-index #plugins-check .status .pluginupdateinfo .separator {border-left:1px dotted #333;}
+#page-admin-index #plugins-check .status .pluginupdateinfo .separator:after {content:" | ";}
 #page-admin-index .upgradepluginsinfo {text-align:center;}
 
 /** Plugins management */
@@ -306,7 +306,6 @@
 #page-admin-plugins #plugins-control-panel .status-new .pluginname {background-color:#e7f1c3;}
 #page-admin-plugins #plugins-control-panel .status-new .statusmsg {color:#060;}
 #page-admin-plugins #plugins-control-panel .disabled .availability {background-color:#eee;}
-#page-admin-plugins #plugins-control-panel .extension .source {background-color:#f3f2aa;}
 #page-admin-plugins #plugins-control-panel .msg td {text-align:center;}
 #page-admin-plugins #plugins-control-panel .requiredby {font-size:0.8em;color:#999;}
 #page-admin-plugins #plugins-overview-panel {margin:1em auto;text-align:center;}
@@ -327,7 +326,6 @@
 #page-admin-plugins #plugins-control-panel .notes .pluginupdateinfo a {padding-right:1em;}
 #page-admin-plugins #plugins-control-panel .notes .pluginupdateinfo .separator {border-left:1px dotted #333;}
 .dir-rtl #plugins-check .pluginupdateinfo {text-align: center;direction: ltr;}
-.dir-rtl #plugins-check .rootdir,
 .dir-rtl #plugins-check .requires-ok {text-align: left;direction: ltr;}
 
 /** MNet networking */
