MDL-9070 forum: Add margin in rtl mode to timed post icon
As the icon has a float on it to move it to the right, a margin-top
needs to be applied to keep it aligned the same as in ltr.

--- a/mod/forum/styles.css
+++ b/mod/forum/styles.css
@@ -171,7 +171,6 @@ span.unread {
 }
 
 .dir-rtl#page-mod-forum-view img.timedpost {
-    margin-right: 0px;
-    margin-left: 5px;
+    margin: 3px 0 0 5px;
     float: right;
 }
