MDL-48947 patch - fix unclickable menu issues
remove z-index fix and instead keep the header from gaining the opacity
change on hide

--- a/theme/bootstrapbase/less/moodle/course.less
+++ b/theme/bootstrapbase/less/moodle/course.less
@@ -53,8 +53,6 @@
         &.right {
             float: right;
         }
-        position: relative;
-        z-index: 10;
     }
     .spinner {
         height: 16px;
@@ -152,8 +150,6 @@
         &.right {
             float: left;
         }
-        position: relative;
-        z-index: 10;
     }
     .activity {
         .spinner {
@@ -342,7 +338,7 @@
     margin-top: 0;
 }
 .course-content ul li.section.hidden {
-    .sectionname,
+    .sectionname > span,
     .content > div,  /* All the divs but the activities which are in a UL. */
     .activity .activityinstance {
         opacity: .5;
