--- a/theme/bootstrapbase/less/moodle/core.less
+++ b/theme/bootstrapbase/less/moodle/core.less
@@ -747,97 +747,74 @@ table.mod_index {
 /**
 * Tags
 */
-#page-tag-coursetags_edit .coursetag_edit_centered {
-    position: relative;
-    width: 600px;
-    margin: 20px auto;
-}
-#page-tag-coursetags_edit .coursetag_edit_row {
-    clear: both;
-}
-#page-tag-coursetags_edit .coursetag_edit_row .coursetag_edit_left {
-    float: left;
-    width: 50%;
-    text-align: right;
-}
-#page-tag-coursetags_edit .coursetag_edit_row .coursetag_edit_right {
-    margin-left: 50%;
-}
-#page-tag-coursetags_edit .coursetag_edit_input3 {
-    display: none;
-}
-#page-tag-coursetags_more .coursetag_more_large {
-    font-size: 120%;
-}
-#page-tag-coursetags_more .coursetag_more_small {
-    font-size: 80%;
-}
-#page-tag-coursetags_more .coursetag_more_link {
-    font-size: 80%;
-}
-#tag-description,
-#tag-blogs {
-    width: 100%;
-}
-#tag-management-box {
-    margin-bottom: 10px;
-    line-height: 20px;
-}
-#tag-user-table {
-    padding: 3px;
-    clear: both;
-    width: 100%;
-}
-#tag-user-table {
-    .clearfix
-}
 img.user-image {
     height: 100px;
     width: 100px;
-}
-#small-tag-cloud-box {
-    width: 300px;
-    margin: 0 auto;
-}
-#big-tag-cloud-box {
-    width: 600px;
-    margin: 0 auto;
-    float: none;
-}
-ul#tag-cloud-list {
-    list-style: none;
-    padding: 5px;
-    margin: 0;
-}
-ul#tag-cloud-list li {
-    margin: 0;
-    display: inline;
-    list-style-type: none;
 }
 #tag-search-box {
     text-align: center;
     margin: 10px auto;
 }
-#tag-search-results-container {
-    padding: 0;
-    width: 100%;
+
+.path-tag .tag-index-items .tagarea {
+    border: 1px solid #E3E3E3;
+    border-radius: 4px;
+    padding: 10px;
+    margin-top: 10px;
 }
-#tag-search-results {
-    padding: 0;
-    margin: 15px 20% 0 20%;
-    float: left;
-    width: 60%;
+
+.path-tag .tag-index-items .tagarea h3 {
     display: block;
-}
-#tag-search-results li {
-    width: 30%;
-    float: left;
-    padding-left: 1%;
-    text-align: left;
+    padding: 3px 0 10px 0;
+    margin: 0px;
+    font-size: 1.1em;
+    font-weight: bold;
     line-height: 20px;
-    padding-right: 1%;
-    list-style: none;
+    color: #999;
+    text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.5);
+    text-transform: uppercase;
+    word-wrap: break-word;
+    border-bottom: solid 1px #E3E3E3;
+    margin-bottom: 10px;
 }
+
+.path-tag .tagarea .controls,
+.path-tag .tagarea .taggeditems {
+    .clearfix();
+}
+.path-tag .tagarea .controls,
+.path-tag .tag-backtoallitems {
+    text-align: center;
+}
+.path-tag .tagarea .controls .gotopage.nextpage {
+    float: right;
+}
+.path-tag .tagarea .controls .gotopage.prevpage {
+    float: left;
+}
+.path-tag .tagarea .controls .exclusivemode {
+    display: inline-block;
+}
+.dir-rtl.path-tag  .tagarea .controls .gotopage.nextpage {
+    float: left;
+}
+.dir-rtl.path-tag  .tagarea .controls .gotopage.prevpage {
+    float: right;
+}
+.path-tag .tagarea .controls.controls-bottom {
+    margin-top: 5px;
+}
+.path-tag .tagarea .controls .gotopage.nextpage::after {
+    padding-right: 5px;
+    padding-left: 5px;
+    content: "»";
+}
+.path-tag .tagarea .controls .gotopage.prevpage::before {
+    padding-right: 5px;
+    padding-left: 5px;
+    content: "«";
+}
+
 span.flagged-tag,
 tr.flagged-tag,
 span.flagged-tag a,
@@ -871,70 +848,144 @@ tr.flagged-tag a {
 .tag-management-table tr:hover td.tageditingon .tagnameedit img {
     opacity: 0.2;
 }
-h2.tag-heading,
-div#tag-description,
-div#tag-blogs,
-body.tag .managelink {
-    padding: 5px;
+.path-tag .tag-relatedtags {
+    padding-top: 10px;
+}
+.path-tag .tag-management-box {
+    text-align: right;
+}
+.path-tag .tag-index-toc {
+    padding: 10px;
+    text-align: center;
+}
+.path-tag .tag-index-toc li,
+.path-tag .tag-management-box li {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+.path-tag .tag-management-box li a.edittag {
+    background-image: url([[pix:moodle|i/settings]]);
+}
+.path-tag .tag-management-box li a.flagasinappropriate {
+    background-image: url([[pix:moodle|i/flagged]]);
+}
+.path-tag .tag-management-box li a.removefrommyinterests {
+    background-image: url([[pix:moodle|t/delete]]);
+}
+.path-tag .tag-management-box li a.addtomyinterests {
+    background-image: url([[pix:moodle|t/add]]);
+}
+.path-tag .tag-management-box li a {
+    background-repeat: no-repeat;
+    background-position: left;
+    padding-left: 17px;
+}
+.tag_feed.media-list .media .itemimage {
+    float: left;
+}
+.dir-rtl .tag_feed.media-list .media .itemimage {
+    float: right;
+}
+.tag_feed.media-list .media .itemimage img {
+    height: 35px;
+    width: 35px;
+}
+.tag_feed.media-list .media .media-body {
+    padding-right: 10px;
+    padding-left: 10px;
+}
+.tag_feed .media .muted a {
+    .muted();
+}
+.tag_cloud {
+    text-align: center;
+}
+.tag_cloud .inline-list li {
+    padding: 0px 0.2em;
+}
+.tag_cloud .tag_overflow {
+    margin-top: 1em;
+    font-style: italic;
 }
 .tag_cloud .s20 {
-    font-size: 1.5em;
-    font-weight: bold;
+    font-size: 2.7em;
 }
 .tag_cloud .s19 {
-    font-size: 1.5em;
+    font-size: 2.6em;
 }
 .tag_cloud .s18 {
-    font-size: 1.4em;
-    font-weight: bold;
+    font-size: 2.5em;
 }
 .tag_cloud .s17 {
-    font-size: 1.4em;
+    font-size: 2.4em;
 }
 .tag_cloud .s16 {
-    font-size: 1.3em;
-    font-weight: bold;
+    font-size: 2.3em;
 }
 .tag_cloud .s15 {
-    font-size: 1.3em;
+    font-size: 2.2em;
 }
 .tag_cloud .s14 {
-    font-size: 1.2em;
-    font-weight: bold;
+    font-size: 2.1em;
 }
 .tag_cloud .s13 {
+    font-size: 2em;
+}
+.tag_cloud .s12 {
+    font-size: 1.9em;
+}
+.tag_cloud .s11 {
+    font-size: 1.8em;
+}
+.tag_cloud .s10 {
+    font-size: 1.7em;
+}
+.tag_cloud .s9 {
+    font-size: 1.6em;
+}
+.tag_cloud .s8 {
+    font-size: 1.5em;
+}
+.tag_cloud .s7 {
+    font-size: 1.4em;
+}
+.tag_cloud .s6 {
+    font-size: 1.3em;
+}
+.tag_cloud .s5 {
     font-size: 1.2em;
 }
-.tag_cloud .s12,
-.tag_cloud .s11 {
-    font-size: 1.1em;
-    font-weight: bold;
-}
-.tag_cloud .s10,
-.tag_cloud .s9 {
+.tag_cloud .s4 {
     font-size: 1.1em;
 }
-.tag_cloud .s8,
-.tag_cloud .s7 {
-    font-size: 1em;
-    font-weight: bold;
-}
-.tag_cloud .s6,
-.tag_cloud .s5 {
-    font-size: 1em;
-}
-.tag_cloud .s4,
 .tag_cloud .s3 {
-    font-size: 0.9em;
-    font-weight: bold;
+    font-size: 1em;
 }
-.tag_cloud .s2,
+.tag_cloud .s2 {
+    font-size: 0.9em;
+}
 .tag_cloud .s1 {
-    font-size: 0.9em;
-}
-.tag_cloud .s0 {
     font-size: 0.8em;
 }
+.tag_cloud .s0 {
+    font-size: 0.7em;
+}
+.tag_list ul {
+    display: inline;
+}
+.tag_list.hideoverlimit .overlimit {
+    display:none;
+}
+.tag_list .tagmorelink {
+    display:none;
+}
+.tag_list.hideoverlimit .tagmorelink {
+    display:inline;
+}
+.tag_list.hideoverlimit .taglesslink {
+    display:none;
+}
+
 /**
 * Web Service
 */
